# PySpector

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .satori.yml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HACKATON.md  NOTICE.md  README.md  config.json  index.html  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: SECURITY.md
.github/workflows/: codeql.yml  generate-docs.yml  publish-to-pypi.yml  python-publish.yml  scorecard.yml
docs/source/: .gitignore  conf.py  index.rst
pluginconfig/: aipocgen.json
plugins/: aipocgen.py
scripts/: setup_cron.sh  setup_hooks.sh
src/: main.rs
src/pyspector/: _ast_encode.py  ast_cache.py  cli.py  config.py  git_history.py  messages.py  plugin_system.py  reporting.py  stats.py  triage.py
src/pyspector/_rust_core/: Cargo.toml
src/pyspector/_rust_core/src/: ast_parser.rs  issues.rs  lib.rs  rules.rs  supply_chain.rs
src/pyspector/_rust_core/src/analysis/: ast_analysis.rs  config_analysis.rs  entropy.rs  mod.rs  taint_analysis.rs
src/pyspector/_rust_core/src/graph/: call_graph_builder.rs  cfg_builder.rs  mod.rs  representation.rs
src/pyspector/_rust_core/tests/: secrets_patterns.rs
src/pyspector/rules/: built-in-rules-ai.toml  built-in-rules-secrets.toml  built-in-rules.toml
tests/examples/: hardcoded_anthropic_key.py
tests/unit/: ast_cache_test.py  config_test.py  reporting_test.py  test_a_sink_rules.py  test_ai_rules.py  test_cli_help.py  test_config.py  test_false_positive_reductions.py  test_get_asts.py  test_group_a_rules.py  test_missing_rules.py  test_reporting_internals.py  test_semantic_provenance.py  test_taint_engine_extension.py
