[workspace]
resolver = "2"
members = [
    ".",                       
    "src/pyspector/_rust_core" 
]

[package]
name = "pyspector-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-governor = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.23", features = ["auto-initialize"] }

pyspector_core = { path = "src/pyspector/_rust_core" }