[metadata]
name = pyspector
version = 0.1.7

[options]
package_dir=
    =src
packages=find:
include_package_data = True
install_requires =
    tomli; python_version < "3.11"

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pyspector = pyspector.cli:cli
    pyspector-pre-commit = pyspector.pre_commit:main
