[package]
name = "_rust_core"
version = "0.1.5"
edition = "2021"

[lib]
name = "_rust_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.23", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
lazy_static = "1.4"
walkdir = "2.5"
rayon = "1.10"
wildmatch = "2.2"
serde_regex = "1.1"
sha1 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }